--- a/blogSite/template/base.html
+++ b/blogSite/template/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blogSite</title>
-    <link rel="stylesheet" href="{% static '/css/styles.css' %}">
+    <!-- <link rel="stylesheet" href="{% static '/css/styles.css' %}"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
@@ -19,7 +19,7 @@
         <b class="navbar-brand">
             Welcome Admin
         </b>
-        <a href=""><button class="btn btn-light " type="button">Create Post</button></a>
+        <a href="{% url create_post %}"><button class="btn btn-light " type="button">Create Post</button></a>
         <a href="{% url 'logout' %}"><button class="btn btn-light " type="button">Logout</button></a>
         {% else %}
       <a href="{% url 'login' %}">Login</a>
