--- a/blogSite/template/index.html
+++ b/blogSite/template/index.html
@@ -1,6 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Hello</h1>
+{% if user.is_authenticated %}
+  <p>Welcome, {{ user.username }}! <a href="{% url 'logout' %}">Logout</a></p>
+{% else %}
+  <p><a href="{% url 'login' %}">Login</a> | <a href="{% url 'register' %}">Register</a></p>
+{% endif %}
+
+{% for post in posts %}
+  <h2>{{ post.title }}</h2>
+  <p>{{ post.content }}</p>
+  <p>Author: {{ post.author }}</p>
+  <p>Date: {{ post.publication_date }}</p>
+  <hr>
+{% endfor %}
+
+
 
 {% endblock %}
