--- a/blogSite/blog/templates/blog/base.html
+++ b/blogSite/blog/templates/blog/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blogSite</title>
-    <!-- <link rel="stylesheet" href="{% static '/css/styles.css' %}"> -->
+    <link rel="stylesheet" href="{% static '/blog/css/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
@@ -17,14 +17,15 @@
           </a>
           {% if user.is_authenticated %}
         <b class="navbar-brand">
-            Welcome Admin
+            Welcome {{user.username}}
         </b>
-        <a href="{% url create_post %}"><button class="btn btn-light " type="button">Create Post</button></a>
+        <a href="{% url 'create_post' %}"><button class="btn btn-light " type="button">Create Post</button></a>
         <a href="{% url 'logout' %}"><button class="btn btn-light " type="button">Logout</button></a>
         {% else %}
-      <a href="{% url 'login' %}">Login</a>
-      <a href="{% url 'register' %}">Register</a>
+      <a href="{% url 'login' %}"><button class="btn btn-light " type="button">Login</button></a>
+      <a href="{% url 'register' %}"><button class="btn btn-light " type="button">Register</button></a>
         {% endif %}
+        <a href="/admin"><button class="btn btn-light " type="button">Admin Login</button></a>
         </div>
       </nav>
     {% block content %}
