--- a/blogSite/blog/templates/blog/index.html
+++ b/blogSite/blog/templates/blog/index.html
@@ -1,10 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'blog/base.html' %}
 {% block content %}
 
 {% if user.is_authenticated %}
   <p>Welcome, {{ user.username }}! <a href="{% url 'logout' %}">Logout</a></p>
-{% else %}
-  <p><a href="{% url 'login' %}">Login</a> | <a href="{% url 'register' %}">Register</a></p>
 {% endif %}
 
 {% for post in posts %}
